Fixed navbar jumping around (Removed transform)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -206,8 +206,8 @@ a:active {
   text-decoration: none;
   color: white;
   padding: 1rem;
-  transition: transform 1s;
-  transform: scale(0.8);
+  /* transition: transform 1s;
+  transform: scale(0.8); */
   font-size: 1.6rem;
   border-radius: 5px;
   cursor: pointer;
@@ -216,7 +216,7 @@ a:active {
 
 .linkNav:hover {
   background-color: #9e0c2b;
-  transform: scale(1);
+  /* transform: scale(1); */
   cursor: pointer;
 }
 
